# LakeFlow

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  env.example  portainer-stack.yml  pyproject.toml  requirements.txt  ruff.toml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  export_code.py  pyproject.toml  requirements.txt
backend/docs/: API_EMBED.md
backend/src/eduai/: main.py
backend/src/eduai/api/: admin.py  auth.py  pipeline.py  qdrant.py  search.py
backend/src/eduai/api/schemas/: search.py
backend/src/eduai/catalog/: app_db.py  db.py
backend/src/eduai/common/: nas_io.py
backend/src/eduai/core/: config.py
backend/src/eduai/pipelines/embedding/: pipeline.py
backend/src/eduai/pipelines/ingesting/: inbox_scanner.py  pipeline.py  raw_ingestor.py
backend/src/eduai/pipelines/processing/: pipeline.py
backend/src/eduai/pipelines/staging/: pipeline.py
backend/src/eduai/scripts/: step0_inbox.py  step1_raw.py  step2_staging.py  step3_processed_files.py  step3_processed_qdrant.py
backend/src/eduai/services/: qdrant_service.py
backend/src/eduai/vectorstore/: qdrant_ingest.py
backend/src/lakeflow/: cli.py  main.py
backend/src/lakeflow/api/: admin.py  admission_agent.py  auth.py  deps.py  inbox.py  library_document_agent.py  library_regulation_agent.py  pipeline.py  qdrant.py  research_khcn_regulation_agent.py  search.py  system.py
backend/src/lakeflow/api/schemas/: schemas.py  search.py
backend/src/lakeflow/catalog/: app_db.py  db.py
backend/src/lakeflow/common/: filesystem.py  hashing.py  nas_io.py  processed_finder.py  query_normalizer.py  raw_finder.py  text_normalizer.py
backend/src/lakeflow/config/: env.py  paths.py
backend/src/lakeflow/core/: auth.py  config.py
backend/src/lakeflow/i18n/: __init__.py  strings.py
backend/src/lakeflow/pipelines/embedding/: pipeline.py  test_ctth.py  test_embed.py
backend/src/lakeflow/pipelines/ingesting/: inbox_scanner.py  models.py  pipeline.py  raw_ingestor.py
backend/src/lakeflow/pipelines/processing/: chunking.py  excel_pipeline.py  pdf_pipeline.py  pipeline.py  word_pipeline.py
backend/src/lakeflow/pipelines/staging/: excel_analyzer.py  pdf_analyzer.py  pipeline.py  word_analyzer.py
backend/src/lakeflow/runtime/: config.py
backend/src/lakeflow/scripts/: step0_inbox.py  step1_raw.py  step2_staging.py  step3_processed_files.py  step3_processed_qdrant.py  test_semantic_search.py
backend/src/lakeflow/services/: llm_chat_service.py  ollama_embed_service.py  qdrant_service.py
backend/src/lakeflow/vectorstore/: client.py  constants.py  qdrant_ingest.py
docs/: DEPLOY-BACKEND-FRONTEND.md  PACKAGES.md  PUBLISH-PYPI.md  troubleshoot-backend-crash.md
frontend/: README.md
lake-flow-ui/: Dockerfile  README.md  cli.py  dev_with_reload.py  pyproject.toml  requirements.txt
(+173 files in other folders)
