[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-ui"
version = "0.1.0"
description = "Streamlit control UI for LakeFlow: pipelines, data lake explorer, semantic search, Q&A."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "LakeFlow" }]
keywords = ["lakeflow", "streamlit", "ui", "data-lake", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "streamlit>=1.32.0",
  "requests>=2.31.0",
  "bottleneck>=1.3.6",
  "numpy>=1.24.0",
  "pypdf>=3.0.0",
  "pandas>=2.0.0",
]

[project.scripts]
lakeflow-ui = "lakeflow_ui.cli:main"

[project.urls]
Homepage = "https://lake-flow.vercel.app"
Documentation = "https://lake-flow.vercel.app/docs"
Repository = "https://github.com/Lampx83/LakeFlow"

[tool.setuptools]
packages = ["lakeflow_ui"]
package-dir = { "lakeflow_ui" = "." }
